adding yml to deploy EC2