@@ -9,6 +9,7 @@ import com.example.springsecurity.entity.CustomerCardDetails;
 import com.example.springsecurity.exception.InsufficientBalanceException;
 import com.example.springsecurity.exception.NotFoundException;
 import com.example.springsecurity.mapper.CustomerMapper;
+import com.example.springsecurity.projection.CustomerRegistrationsProjection;
 import com.example.springsecurity.repository.CustomerRepository;
 import com.example.springsecurity.service.CustomerService;
 import lombok.AllArgsConstructor;
@@ -33,6 +34,7 @@ public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
     private final CustomerMapper customerMapper=CustomerMapper.INSTANCE;
+    private final CustomerFinderService customerFinderService;
 
 
     @Override
@@ -44,16 +46,16 @@ public class CustomerServiceImpl implements CustomerService {
 
     @Override
     public CustomerDto getCustomerById(Long customerID) {
-        Customer customer=customerRepository.findById(customerID).orElseThrow(()->new NotFoundException("Customer not found"));
+        Customer customer=customerFinderService.findCustomerById(customerID);
         return CustomerMapper.INSTANCE.toDto(customer);
     }
 
 
-    @Override
-    public Customer findCustomerById(Long customerId) {
-        return customerRepository.findById(customerId)
-                .orElseThrow(() -> new NotFoundException("Customer not found"));
-    }
+//    @Override
+//    public Customer findCustomerById(Long customerId) {
+//        return customerRepository.findById(customerId)
+//                .orElseThrow(() -> new NotFoundException("Customer not found"));
+//    }
 
     @Override
     public List<CustomerDto> getAllCustomer(int pageNumber, int pageSize) {
@@ -66,22 +68,14 @@ public class CustomerServiceImpl implements CustomerService {
     //berem dannie iz repository
     @Override
     public CustomerRegistrationsByYearResponseDTO getCustomerRegistrationsByYear() {
-        List<Object[]> registrationData = customerRepository.getCustomerRegistrationsByYear();
-        Map<Integer, Long> totalRegistrationsByYear = new HashMap<>();
-
-        // Проходим по каждой строке данных о регистрации
-        for (Object[] row : registrationData) {
-            // Извлекаем Timestamp и преобразуем в год
-            Timestamp timestamp = (Timestamp) row[0];
-            int year = timestamp.toLocalDateTime().getYear();
-            // Извлекаем количество регистраций
-            long customerRegistrations = ((Number) row[1]).longValue();
-            // Добавляем количество регистраций в существующее значение для данного года
-            totalRegistrationsByYear.merge(year, customerRegistrations, Long::sum);
-        }
+        List<CustomerRegistrationsProjection> registrationData = customerRepository.getCustomerRegistrationsByYear();
         List<CustomerRegistrationDTO> registrationsByYear = new ArrayList<>();
 
-        totalRegistrationsByYear.forEach((year, registrations) -> registrationsByYear.add(new CustomerRegistrationDTO(year, registrations)));
+        for (CustomerRegistrationsProjection projection : registrationData) {
+            Integer year = projection.getRegistrationYear(); // Получаем год как int
+            Long customerRegistrations = projection.getCustomerRegistrations(); // Получаем количество регистраций
+            registrationsByYear.add(new CustomerRegistrationDTO(year, customerRegistrations));
+        }
         CustomerRegistrationsByYearResponseDTO responseDTO = new CustomerRegistrationsByYearResponseDTO();
         responseDTO.setRegistrationsByYear(registrationsByYear);
         return responseDTO;
@@ -92,7 +86,7 @@ public class CustomerServiceImpl implements CustomerService {
         List<Customer> customers=customerRepository.searchCustomers(keyword);
         return customers.stream()
                 .map(CustomerMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
